// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caret renders with direction down 1`] = `
<svg
  height="26"
  width="26"
>
  <path
    d="M0 26 L12 12 L24 26"
  />
</svg>
`;

exports[`Caret renders with direction left 1`] = `
<svg
  height="26"
  width="26"
>
  <path
    d="M-2 0 L12 12 L-2 24"
  />
</svg>
`;

exports[`Caret renders with direction right 1`] = `
<svg
  height="26"
  width="26"
>
  <path
    d="M26 0 L12 12 L26 24"
  />
</svg>
`;

exports[`Caret renders with direction up 1`] = `
<svg
  height="26"
  width="26"
>
  <path
    d="M0 -2 L12 12 L24 -2"
  />
</svg>
`;
